--- a/hmac/Cargo.toml
+++ b/hmac/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/RustCrypto/MACs"
 keywords = ["crypto", "mac", "hmac", "digest"]
 
 [dependencies]
-crypto-mac = "0.4"
+crypto-mac = { git = "https://github.com/hydai/traits", rev = "6a717af" }
 generic-array = "0.8"
 digest = "0.6"
 
